--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-aniso8601==6.0.0
-arabic-reshaper==2.0.14
-attrs==19.1.0
-Click==7.0
-configparser==3.7.4
-Flask==1.0.2
-Flask-Cors==3.0.7
-flask-restplus==0.12.1
-future==0.17.1
+aniso8601==8.0.0
+arabic-reshaper==2.0.15
+attrs==19.3.0
+click==7.1.1
+configparser==5.0.0
+Flask==1.1.2
+Flask-Cors==3.0.8
+flask-restx==0.2.0
+future==0.18.2
 itsdangerous==1.1.0
-Jinja2==2.10.1
-jsonschema==3.0.1
+Jinja2==2.11.2
+jsonschema==3.2.0
 MarkupSafe==1.1.1
-Pillow==6.0.0
-pyrsistent==0.15.1
-python-bidi==0.4.0
-pytz==2019.1
-reportlab==3.5.21
-six==1.12.0
-Werkzeug==0.15.2
+Pillow==7.1.1
+pyrsistent==0.16.0
+python-bidi==0.4.2
+pytz==2019.3
+reportlab==3.5.42
+six==1.14.0
+Werkzeug==1.0.1
